<resources>
    <string name="app_name">AlmaChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="type_message">Type your message...</string>
    <string name="action_search">Search</string>
    <string name="action_view_contacts">View Contacts</string>
    <string name="action_media">Media</string>
    <string name="action_block">Block</string>
    <string name="action_email_chat">Email Chat</string>
    <string name="action_clear_chat">Clear Chat</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>
    <string name="notification">Notification</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="read_receipts">If you turn off read receipts,you won\'t be able to see read receipts from other people .Read receipts are always sent for group chats</string>
    <string name="last_seen">"If you don't share your Last Seen,you won't be able to see other people's Last Seen"</string>
</resources>
