<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/accounts"
            android:title="@string/accounts" />
        <item
            android:id="@+id/notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/chat"
            android:title="@string/chats" />
        <item
            android:id="@+id/help"
            android:title="@string/help" />
        <item
            android:id="@+id/logOut"
            android:title="@string/logout" />
    </group>

</menu>