<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_viewContacts"
        android:orderInCategory="100"
        android:title="@string/action_view_contacts"
        app:showAsAction="never"/>
    <item android:id="@+id/action_media"
        android:orderInCategory="100"
        android:title="@string/action_media"
        app:showAsAction ="never"/>
    <item android:id="@+id/action_search_message"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction ="never"/>
    <item android:id="@+id/action_block"
        android:orderInCategory="100"
        android:title="@string/action_block"
        app:showAsAction ="never"/>

    <item android:id="@+id/action_email_chat"
        android:orderInCategory="100"
        android:title="@string/action_email_chat"
        app:showAsAction ="never"/>

    <item android:id="@+id/action_clear_chat"
        android:orderInCategory="100"
        android:title="@string/action_clear_chat"
        app:showAsAction ="never"/>
    <item android:id="@+id/action_attach"
        android:orderInCategory="100"
        android:title="Attach"
        android:icon="@drawable/attach"
        app:showAsAction ="always"/>

</menu>